--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -103,7 +103,10 @@ a {	display: inline-block;
 	width: 900px;
 	max-height: fit-content; 
 	padding: 5px;
-	position: fixed;
+	position: aboslute;
+	left: 0px;
+	top: 0px;
+	z-index: -1;
 	background-color: lightgrey; 
 }
 
